--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -4,6 +4,9 @@
     {% include 'include/_sidebar_money.html' %}
 {% endblock %}
 {% block content %}
+    <div class="shadow-sm p-3 mb-5 bg-body rounded">
+    Сумма: {{ info.allmoney }}
+    </div>
     <div class="row">
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
