--- a/clients/templates/include/_forms_clients_datalist.html
+++ b/clients/templates/include/_forms_clients_datalist.html
@@ -1,12 +1,55 @@
+{% block javascript %}
+    <script>
+    $(document).ready(function () {
+            $('#ajax_phone_{{ widget.name }}').keyup(function () {
+                // create an AJAX call
+                $.ajax({
+                    data: $(this).serialize(), // get the form data
+                    url: "{% url 'ajax_request' %}?related=clients&data={{ widget.name }}",
+                    // on success
+                    success: function (response) {
+                        if (response.is_exist == true) {
+                            $("#ajax-{{ widget.name }}").text(response.is_taken.name);
+                            var dataList = document.getElementById('{{ widget.name }}');
+                            var input = document.getElementById('ajax_phone_{{ widget.name }}');
+                            var request = new XMLHttpRequest();
+                            document.getElementById('{{ widget.name }}').innerHTML = '';
+                            response.is_taken.forEach(function(item) {
+                                    console.log(item)
+                                    var option = document.createElement('option');
+                                    // Устанавливаем значение, используя элементы массива JSON.
+                                    option.value = item.phone;
+                                    option.title = item.name;
+                                    option.text = item.phone;
+                                    // Добавляем элемент <option> к <datalist>.
+                                    dataList.appendChild(option);
+                                  });
+                            input.placeholder = "e.g. datalist";
+                            input.placeholder = "Введите название...";
+                            }
+                    },
+                    error: function (response) {
+                        console.log(response.responseJSON.errors)
+                    }
+                });
+                return false;
+            });
+                $('#ajax_phone_{{ widget.name }}').on('change', function(){
+                $("#ajax-{{ widget.name }}").text($('#'+$(this).attr('list')).find('option[value="'+$(this).val()+'"]').text());
+                var opt = $('option[value="'+$(this).val()+'"]');
+                $('#id_clients-name').val(opt.length ? opt.attr('title') : 'test')
+            });
+})
+
+    </script>
+{% endblock javascript %}
 <br>
-<input list="{{ widget.name }}"
-    {% if widget.value != None %} name="{{ widget.name }}" value="{{ widget.value|stringformat:'s' }}"{% endif %}
-    {% include "django/forms/widgets/attrs.html" %}>
+<input id="ajax_phone_{{ widget.name }}" list="{{ widget.name }}"
+    {% if widget.value != None %} name="{{ widget.name }}" value="+7" {% endif %}
+    {% include "django/forms/widgets/attrs.html" %} autocomplete="off">
+    <span class="badge rounded-pill bg-warning text-dark" id="ajax-{{ widget.name }}" name="ajax-{{ widget.name }}"></span>
 
 <datalist id="{{ widget.name }}">
-    {% for group_name, group_choices, group_index in widget.optgroups %}
-        {% if group_name %}
-<optgroup label="{{ group_name }}">{% endif %}{% for option in group_choices %}
-  {% include option.template_name with widget=option %}{% endfor %}{% if group_name %}
-</optgroup>{% endif %}{% endfor %}
+    <optgroup label="">
+    </optgroup>
 </datalist><br>
