--- a/orders/templates/related/_related_orders_submenu.html
+++ b/orders/templates/related/_related_orders_submenu.html
@@ -5,6 +5,7 @@
     <a href="?relateddata={'orders' : {'category': 'simple'}}" class="list-group-item list-group-item-action">Заказы в ремонт</a><br>
     <form action="" method="get">
         {% csrf_token %}
+        <input type="hidden" name="relateddata" value="{'orders' : {'category': 'filter'}}">
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Поиск" aria-label="Поиск" name="filter" aria-describedby="button-addon2">
             <button type="submit" class="btn btn-outline-secondary" id="button-addon2">Искать</button>
