--- a/orders/templates/orders/sidebar_menu_tags.html
+++ b/orders/templates/orders/sidebar_menu_tags.html
@@ -12,6 +12,13 @@
 </div>
 <br>
 
+<h5>Статусы</h5>
+<div class="list-group">
+{% for key, value in status.items %}
+    <a href="{% url 'orders_home' %}?status={{ key }}" class="list-group-item list-group-item-action">{{ value.title }} <span class="badge rounded-pill bg-dark">{{ value.count }}</span></a>
+    {% endfor %}
+</div>
+<br>
 
 <h5>Поиск</h5>
 <form action="{% url 'orders_home' %}" method="get">
