--- a/prints/templates/prints/prints_list.html
+++ b/prints/templates/prints/prints_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
-    {% include 'include/_sidebar_clients.html' %}
+    {% include 'include/_sidebar_prints.html' %}
 {% endblock %}
 {% block content %}
     <div class="row">
