--- a/prints/templates/prints/sidebar_prints_menu_tags.html
+++ b/prints/templates/prints/sidebar_prints_menu_tags.html
@@ -1,3 +1,11 @@
+<h5>Vse form</h5>
 <div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action">Меню 1</a>
+    <a href="{% url 'print_add'%}?category=simple" class="list-group-item list-group-item-action">Vse form 1</a>
 </div>
+<br>
+
+<h5>Создать</h5>
+<div class="list-group">
+    <a href="{% url 'print_add'%}?category=simple" class="list-group-item list-group-item-action">Создать form</a>
+</div>
+<br>
