--- a/prints/templates/prints/print_edit.html
+++ b/prints/templates/prints/print_edit.html
@@ -15,4 +15,24 @@
         <button type="submit" class="btn btn-primary btn-block">Сохранить</button>
     </form>
 
+    <br><br>
+     <h4>
+     Cвязанные данные
+    </h4>
+    <hr>
+    {% for key, value in fields.items %}
+        {% for k2, v2 in value.items %}
+            {% if k2 == 'module'%}
+                   Модуль: {{ v2 }}<br>
+            {% endif %}
+            {% if k2 == 'fields'%}
+                Связанные поля:
+                {% for v_list in v2 %}
+                    <span class="badge rounded-pill bg-dark">{{ v_list }}</span>
+                {% endfor %}
+            {% endif %}
+        {% endfor %}
+        <hr>
+    {% endfor %}
+
 {% endblock %}
