--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -50,6 +50,15 @@
                                     {% endif %}
                                 {% endfor %}
                             {% endfor %}
+
+                <div class="card border-light" >
+                                            <div class="card-header">Дополнительные возможности</div>
+                                            <div class="card-body">
+                                                тут
+                                            </div>
+                                        </div>
+
+
                                                     <div class="d-flex justify-content-end">
                                 <a href="edit/{{ item.pk }}"><button type="button" class="btn btn-secondary">Редактировать</button></a>
                             </div><br>
