--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="{% static 'bootstrap-5.0.0/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    {% block link %}{% endblock %}
     <!-- jQuery -->
     <script src="{% static 'jquery/jquery-3.6.0.min.js' %}"></script>
 
