--- a/orders/templates/related/_related_orders_submenu.html
+++ b/orders/templates/related/_related_orders_submenu.html
@@ -1,4 +1,4 @@
-<h5>Деньги заказы</h5>
+<h5>Заказы</h5>
 <div class="list-group">
     <a href="?relateddata={'orders' : {'category': 'all'}}" class="list-group-item list-group-item-action">Все заказы</a>
     <a href="?relateddata={'orders' : {'category': 'fast'}}" class="list-group-item list-group-item-action">Быстрые заказы</a>
