--- a/storehouse/templates/storehouse/storehouse_edit.html
+++ b/storehouse/templates/storehouse/storehouse_edit.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
-{% include 'include/_sidebar_prints.html' %}
+{% include 'include/_sidebar_settings_storehouse.html' %}
 {% endblock %}
 
 {% block content %}
