--- a/storehouse/templates/storehouse/settings/storehouse_settings_list.html
+++ b/storehouse/templates/storehouse/settings/storehouse_settings_list.html
@@ -4,11 +4,13 @@
     {% include 'include/_sidebar_settings_storehouse.html' %}
 {% endblock %}
 {% block content %}
+
+    {% if show == 'category' %}
     <div class="row">
         <div class="col-4">
             <div class="list-group" id="list-tab" role="tablist">
                 {% for item in page_obj %}
-                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.name }}</a>
+                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.title }}</a>
                 {% endfor %}
             </div>
         </div>
@@ -38,7 +40,7 @@
                                 {% endif %}
                             {% endfor %}
                                                     <div class="d-flex justify-content-end">
-                                <a href="edit/?model={{ model }}&id={{ item.pk }}"><button type="button" class="btn btn-secondary">Редактировать</button></a>
+                                <a href="edit/?show={{ show }}&tag=edit&id={{ item.pk }}"><button type="button" class="btn btn-secondary">Редактировать</button></a>&nbsp;&nbsp; <a href="edit/?show={{ show }}&tag=delete&id={{ item.pk }}"><button type="button" class="btn btn-danger">Удалить</button></a>
                             </div><br>
                         </div>
                     </div>
@@ -46,6 +48,55 @@
             </div>
         </div>
     </div>
+    {% endif %}
+
+    {% if show == 'storehouse' %}
+    <div class="row">
+        <div class="col-4">
+            <div class="list-group" id="list-tab" role="tablist">
+                {% for item in page_obj %}
+                    <a class="list-group-item list-group-item-action" id="list-{{ item.pk }}" data-bs-toggle="list" href="#id-list-{{ item.pk }}" role="tab" aria-controls="home">{{ item.name }}</a>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="tab-content" id="nav-tabContent">
+                {% for item in page_obj %}
+                    <div class="tab-pane fade show" id="id-list-{{ item.pk }}" role="tabpanel" aria-labelledby="list-{{ item.pk }}">
+                        <div class="shadow p-3 mb-5 bg-body rounded">
+                            <div class="card border-light" >
+                                <div class="card-header bg-gradient">Номер: <span class="badge rounded-pill bg-info text-dark">{{ item.pk }}</span></div>
+                                <div class="card-body">
+                                    Адрес: {{ item.address }}<br>
+                                    Телефон: {{ item.phone}}<br>
+                                    Категория: {{ item.category}}<br>
+
+                                </div>
+                            </div>
+                            {% for related_item in related_list %}
+                                {% if related_item.related_uuid and item.related_uuid == related_item.related_uuid %}
+                                    <div class="card border-light" >
+                                        <div class="card-header">{{ related_item.module_name }}</div>
+                                        <div class="card-body">
+                                        {% for key, value in related_item.items %}
+                                            {% if key != 'related_uuid' and key != 'module_name' %}
+                                                {{ key }}: {{ value }}<br>
+                                            {% endif %}
+                                        {% endfor %}
+                                        </div>
+                                        </div>
+                                {% endif %}
+                            {% endfor %}
+                                                    <div class="d-flex justify-content-end">
+                                <a href="edit/?show={{ show }}&tag=edit&id={{ item.pk }}"><button type="button" class="btn btn-secondary">Редактировать</button></a>&nbsp;&nbsp; <a href="edit/?show={{ show }}&tag=delete&id={{ item.pk }}"><button type="button" class="btn btn-danger">Удалить</button></a>
+                            </div><br>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    {% endif %}
     <br><br>
     <nav aria-label="...">
         <ul class="pagination">
