--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -1,41 +1,42 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Меню</a>
+          <a class="navbar-brand" href="{% url 'home' %}">CRM3</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
-                  </li>
 
                   {% if user.is_authenticated %}
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">Добавить новость</a>
+                      <a class="nav-link" aria-current="page" href="{% url 'add_news' %}">Новости</a>
                   </li>
 
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'view_plugins' %}">Плагины</a>
-                  </li>
 
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'view_repository' %}">Репозиторий</a>
-                  </li>
                   {% for key, value in nav.items %}
 
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="{% url value.nav_url %}">{{value.nav_name}}</a>
-                      </li>
-                  {% endfor %}
-                  {% else %}
+                          <a class="nav-link" aria-current="page" href="{% url value.nav_url %}">{{value.nav_name}}</a>
+                          </li>
+                      {% endfor %}
+                      <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Настройки
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="{% url 'user_home' %}">Пользователи</a></li>
+                <li><a class="dropdown-item" href="{% url 'view_plugins' %}">Плагины</a></li>
+                <li><a class="dropdown-item" href="{% url 'view_repository' %}">Репозиторий</a></li>
+              </ul>
+            </li>
+              {% else %}
                       NOT AUTH
                   {% endif %}
               </ul>
           </div>
           <span class="navbar-text">
  {% if user.is_authenticated %}
-     Добро пожаловать, {{ user.username }} | <a href="{% url 'logout' %}">Выход</a>
+      {{ user.username }} | <a href="{% url 'logout' %}">Выход</a>
  {% else %}
      <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
  {% endif %}
