--- a/orders/templates/settings/sidebar_menu_settings_tags.html
+++ b/orders/templates/settings/sidebar_menu_settings_tags.html
@@ -1,5 +1,5 @@
 <h5>Настройки</h5>
-<h6>Услуги</h6>
+<h6>Услуги ремонта</h6>
 <div class="list-group">
     <a href="{% url 'settings_add'%}?model=service" class="list-group-item list-group-item-action">Создать услугу</a>
     <a href="{% url 'order_settings'%}?model=service" class="list-group-item list-group-item-action">Список всех услуг</a><br>
@@ -19,6 +19,21 @@
 <div class="list-group">
     <a href="{% url 'settings_add' %}?model=device" class="list-group-item list-group-item-action">Создать устройство</a>
     <a href="{% url 'order_settings'%}?model=device" class="list-group-item list-group-item-action">Все устройства</a><br>
+    <form action="{% url 'order_settings' %}?model=device" method="get">
+    {% csrf_token %}
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Поиск" aria-label="Поиск" name="filter" aria-describedby="button-addon2">
+                <input type="hidden" name="model" value="device">
+        <button type="submit" class="btn btn-outline-secondary" id="button-addon2">Искать</button>
+    </div>
+    </form>
+</div>
+
+<br>
+<h6>Общие категории</h6>
+<div class="list-group">
+    <a href="{% url 'settings_add' %}?model=category_service" class="list-group-item list-group-item-action">Создать общую категорию</a>
+    <a href="{% url 'order_settings'%}?model=category_service" class="list-group-item list-group-item-action">Все категории</a><br>
     <form action="{% url 'order_settings' %}?model=device" method="get">
     {% csrf_token %}
     <div class="input-group mb-3">
