--- a/orders/templates/orders/sidebar_menu_tags.html
+++ b/orders/templates/orders/sidebar_menu_tags.html
@@ -4,18 +4,18 @@
     <a href="{% url 'order_add'%}?category=fast" class="list-group-item list-group-item-action">Создать заказ на месте</a>
 </div>
 <br>
+<h5>Категории услуг</h5>
+<div class="list-group">
+    {% for key, value in category_service.items %}
+    <a href="{% url 'orders_home' %}?status={{ key }}" class="list-group-item list-group-item-action">{{ value.name }} <span class="badge rounded-pill bg-dark">{{ value.count }}</span></a>
+    {% endfor %}
+</div>
+<br>
 <h5>Заказы</h5>
 <div class="list-group">
     <a href="{% url 'orders_home' %}?category=simple" class="list-group-item list-group-item-action">Заказы в ремонт</a>
     <a href="{% url 'orders_home' %}?category=fast" class="list-group-item list-group-item-action">Заказы на месте</a>
     <a href="{% url 'orders_home' %}" class="list-group-item list-group-item-action">Все заказы</a>
-</div>
-<br>
-<h5>Категории</h5>
-<div class="list-group">
-    {% for key, value in category_service.items %}
-    <a href="{% url 'orders_home' %}?status={{ key }}" class="list-group-item list-group-item-action">{{ value.title }} <span class="badge rounded-pill bg-dark">{{ value.count }}</span></a>
-    {% endfor %}
 </div>
 <br>
 <h5>Статусы</h5>
