--- a/orders/templates/settings/sidebar_menu_settings_tags.html
+++ b/orders/templates/settings/sidebar_menu_settings_tags.html
@@ -43,3 +43,10 @@
     </div>
     </form>
 </div>
+
+<br>
+<h6>Статусы</h6>
+<div class="list-group">
+    <a href="{% url 'settings_add' %}?model=status" class="list-group-item list-group-item-action">Создать статус</a>
+    <a href="{% url 'order_settings'%}?model=status" class="list-group-item list-group-item-action">Все статусы</a><br>
+</div>
