--- a/money/templates/money/money_list.html
+++ b/money/templates/money/money_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load money_template_tags %}
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
     {% include 'include/_sidebar_money.html' %}
@@ -48,7 +49,7 @@
                     </li>
                 {% elif p > page_obj.number|add:-3 and p < page_obj.number|add:3 %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ p }}">{{ p }}</a>
+                        <a class="page-link" href="?{% url_replace page=p %}">{{ p }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
